k8s-deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: quay-demo
  name: quay-demo
