k8s-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: quay-demo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world
  type: ClusterIP
