k8s-deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: hello-world
  namespace: quay-demo
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: hello-world
